@@ -228,11 +228,7 @@ TAB_SIZE               = 2
 # "Side Effects:". You can put \n's in the value part of an alias to insert
 # newlines.
 
-ALIASES                = "TODO=\todo" \
-                         "naslfn{1}=\par NASL Function: \b \1\n" \
-                         "nasluparam=\par NASL Unnamed Parameters:\n" \
-                         "naslnparam=\par NASL Named Parameters:\n" \
-                         "naslret=\par NASL Returns:\n"
+ALIASES                = "TODO=\todo"
 
 # This tag can be used to specify a number of word-keyword mappings (TCL only).
 # A mapping has the form "name=value". For example adding "class=itcl::class"
@@ -758,8 +754,7 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT                  = @CMAKE_SOURCE_DIR@/base \
-                         @CMAKE_SOURCE_DIR@/misc \
-                         @CMAKE_SOURCE_DIR@/nasl
+                         @CMAKE_SOURCE_DIR@/misc
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
