@@ -758,8 +758,7 @@ WARN_LOGFILE           =
 # Note: If this tag is empty the current directory is searched.
 
 INPUT                  = @CMAKE_SOURCE_DIR@/base \
-                         @CMAKE_SOURCE_DIR@/misc \
-                         @CMAKE_SOURCE_DIR@/nasl
+                         @CMAKE_SOURCE_DIR@/misc
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
